# mempalace-evolve

./: .coveragerc  .editorconfig  .gitattributes  .gitignore  .markdownlint.yml  .mcp.json  .mempalace_manifest.json  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DREAMSEED.md  DreamSeed-Setup-Windows.cmd  DreamSeed-Setup-Windows.ps1  LICENSE  README.md  README.zh-CN.md  SECURITY.md  benchmark.py  mkdocs.yml  package.json  pyproject.toml  pytest.ini  temp_patch.txt
.automation/: CHANGELOG.md  RELEASE_PROCESS.md
.claude/: plan.md
.codex-project/: OLD_KERNEL_FEATURE_MAP.md  PROJECT_MEMORY.md
.dreamseed/: settings.json
.dreamseed/agents/: mcp-scout.md  self-improvement-reviewer.md
.dreamseed/tasks/: ecosystem-candidate-review.json  provider-debug.json  release-check.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  tests.yml
config/: approval.policy.json  brand_allowlist.json  mcp.registry.json
docs/: api-reference.md  architecture.md  contributing.md  dreamseed-system-prompt.md  ecosystem-absorption.md  index.md  quickstart.md  roadmap.md  security.md  task-contracts.md  vision.md
docs/examples/: basic_usage.py  evolution_demo.py  langchain_integration.py  rest_api_usage.py
dreamseed-layer/: .gitignore  .mcp.json  AGENTS.md  DREAMSEED.md  README.md  package-lock.json  package.json  requirements-dreamseed.txt
dreamseed-layer/.dreamseed/: settings.json
dreamseed-layer/config/: approval.policy.json  brand_allowlist.json  mcp.registry.json  providers.example.json
dreamseed-layer/desktop/: desktop.css  desktop.js  electron-main.mjs  index.html  preload.cjs  shared-history.mjs
dreamseed-layer/docs/: approval-gate.md  dreamseed-system-prompt.md  ecosystem-candidates.md  installation.md  kernel-knowledge-graph.md  release-checklist.md
dreamseed-layer/manager/: app.css  app.js  index.html
dreamseed-layer/scripts/: approval_gate.py  brand_audit.py  build-python-wheelhouse.ps1  desktop_render_smoke.mjs  dreamseed-approval-gate.ps1  dreamseed-audit.ps1  dreamseed-desktop-launch.ps1  dreamseed-memory-bridge.ps1  dreamseed-memory.ps1  (+22 more)
dreamseed_layer/: __init__.py  __main__.py  manager_ui.py
examples/: langchain_agent.py  openai_agent.py  openai_example.py  rest_api_demo.py  rest_api_example.py  sdk_basic.py
installers/: dreamseed-update-manifest.json
scripts/: approval_gate.py  brand_audit.py  build-python-wheelhouse.ps1  build-windows-full-kit.ps1  build-windows-setup-exe.ps1  dreamseed-audit.ps1  dreamseed-clean-user-smoke.ps1  dreamseed-runtime-compact-patch.ps1  dreamseed-smoke.ps1  dreamseed_compact_cache.py  dreamseed_context_doctor.py  dreamseed_eval.py  dreamseed_memory_bridge.py  dreamseed_output_compress.py  dreamseed_self_evolve.py  import_ccswitch_provider.py  import_claude_history.py  install-dreamseed.ps1  install-python-deps.ps1  kernel_doctor.py  mcp_doctor.py  memory_promote.py  memory_review.py  package-dreamseed.ps1  provider_bridge.mjs  provider_manager.mjs  setup-bootstrap.ps1  uninstall-dreamseed.ps1  update-dreamseed-code.ps1
tests/: conftest.py  test_adapters.py  test_adaptive_scorer.py  test_advanced_query.py  test_async_sdk.py  test_batch_ops.py  test_chroma_helper.py  test_cli.py  test_config.py  test_consolidation.py  test_dedup.py  test_documentation_contract.py  test_embeddings.py  test_evolution.py  test_export.py  test_importance_scorer.py  test_ingest.py  test_integration.py  test_knowledge_graph.py  test_layers.py  test_lifecycle.py  test_llm_pipeline.py  test_new_features.py  test_new_features_v2.py  test_new_features_v3.py  test_new_search.py  test_recall_contract.py  test_retrieval_quality.py  test_sdk.py  test_sdk_v3.py  test_spaced_repetition.py
(+581 files in other folders)
