[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempalace-evolve"
version = "0.1.0"
description = "Self-evolving memory palace and local DreamSeed Code agent layer for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DreamSeed" }]
keywords = ["ai", "memory", "agent", "knowledge-graph", "vector-search", "evolution"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "chromadb>=0.4.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
mcp = ["fastmcp>=2.0.0"]
langchain = ["langchain-core>=0.1.0"]
all = ["mempalace-evolve[api,mcp,langchain]"]
dev = ["pytest>=7.0", "pytest-asyncio", "httpx", "ruff"]

[project.urls]
Homepage = "https://github.com/a2328275243/mempalace-evolve"
Repository = "https://github.com/a2328275243/mempalace-evolve"
Issues = "https://github.com/a2328275243/mempalace-evolve/issues"

[project.scripts]
mempalace = "mempalace_evolve.cli:main"
mempalace-server = "mempalace_evolve.adapters.rest_api:serve"
mempalace-mcp = "mempalace_evolve.adapters.mcp_server:main"
dreamseed = "dreamseed_layer:main"
dreamseed-manager = "dreamseed_layer.manager_ui:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mempalace_evolve", "dreamseed_layer"]

[tool.ruff]
target-version = "py310"
line-length = 100
