[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mempalace-evolve"
version = "0.1.0"
description = "Self-evolving memory palace for AI agents — persistent memory with automatic learning, knowledge graph, and multi-agent support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DreamSeed" }]
keywords = [
    "ai-memory", "knowledge-graph", "rag", "agent", "llm",
    "vector-search", "mcp", "langchain", "chromadb", "sqlite",
    "semantic-search", "long-term-memory", "python", "ai-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "chromadb>=0.4.0",
    "typing-extensions>=4.0; python_version < '3.11'",
]

[project.optional-dependencies]
api = ["fastapi>=0.100.0", "uvicorn>=0.20.0"]
mcp = ["fastmcp>=2.0.0"]
langchain = ["langchain-core>=0.1.0"]
all = ["mempalace-evolve[api,mcp,langchain]"]
dev = ["mempalace-evolve[api,mcp,langchain]", "pytest>=7.0", "pytest-asyncio", "pytest-cov", "httpx", "ruff"]

[project.urls]
Homepage = "https://github.com/a2328275243/mempalace-evolve"
Repository = "https://github.com/a2328275243/mempalace-evolve"
Documentation = "https://github.com/a2328275243/mempalace-evolve/tree/master/docs"
Issues = "https://github.com/a2328275243/mempalace-evolve/issues"

[project.scripts]
mempalace = "mempalace_evolve.cli:main"
mempalace-server = "mempalace_evolve.adapters.rest_api:serve"
mempalace-mcp = "mempalace_evolve.adapters.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mempalace_evolve"]

[tool.ruff]
target-version = "py310"
line-length = 100
